@@ -1,6 +1,8 @@
 DIST libssh2-0.18.tar.gz 541428 RMD160 2088c73a7903828670e14c6289a6961f5a3e4764 SHA1 9bc6148869fca08350e27ea2c9fc44917ac027ff SHA256 6964a5869d757c8c9f64256bdafcff302826acf9898150ada69eb229b3017ccc
 DIST libssh2-1.0.tar.gz 565414 RMD160 bbf61bf25ec0e047828ddcb29c5e3303a527bbbd SHA1 630ad6509a25d1b585875637a459a95502ba0863 SHA256 2601c58bee8126b0a2adf1596010fc042abe0f2a8f446c6f7cfedf71e3d90e62
+DIST libssh2-1.1.tar.gz 582185 RMD160 6cc3d6dcf35178b8646efc18c4720b559720bbe0 SHA1 f3d65c8a24c6e8090366b9901e9be97a7d3f38e2 SHA256 507b7a60b7cafeef071c58a93d2c3c9ee07092a61d5ab29aee73e8c4c6c7020a
 EBUILD libssh2-0.18.ebuild 799 RMD160 cb912374809303364f0bd8331e1ded132896c274 SHA1 834cb6641a6d88e8e76d08cd69beaeae87dd7771 SHA256 342f5b98ece8e535bc1768feac14577815752ce2bedbb101bf04055a1bedf503
 EBUILD libssh2-1.0.ebuild 797 RMD160 0e29d1612574a93e2d6fb1b80e5249df8750459a SHA1 dfbfccc5a6c3094ce9d9d966341359a2ca121f60 SHA256 1c9e93a11a8a256fc861cc86ab784dd448095d64e1beb2597297f1c2593270f4
-MISC ChangeLog 2367 RMD160 8ca84aa11ae120ea9d33671a5ede88a72e3362f6 SHA1 ea3fb71cc01acfcae2b830f88dc424cb6693dfaf SHA256 6f7840f3699ea0ce6b4c79274a6e1844ca885250381c941bcd1cfda896bfaf67
+EBUILD libssh2-1.1.ebuild 880 RMD160 36694e58affce23efc585f554ab2c8b3c25858a5 SHA1 1bdb908876ceea52f59c49fc42843e8743655637 SHA256 68b31bc8d940e6917dc7cb4f8005fee998b8f2072374f89687d201e5cdcc235d
+MISC ChangeLog 2540 RMD160 1eef238cc0d42e4253b716ce20bdb629ead135b5 SHA1 dedc5666237833801a803daf93331cabfbef46d8 SHA256 57d4811a6c9f99d7b85bf315d281e8cdd0ee5c4d70afd237b1d011510f0ebf37
 MISC metadata.xml 237 RMD160 d5d62111134d3627f8c6a38a25b31ce29463d8a0 SHA1 cf8676f902dc6922442ba70f8960d61b61321e63 SHA256 2b5a65c2d108fb4345b626b9e9dd9c7bbab7adf3a95b978b4b9e696fc82251ac
